* Fri Jan 02 2015 Martin Kolman <martin.kolman@gmail.com> - 0.50.4
- the actual Python 2.5 compatibility fixes
* Thu Jan 01 2015 Martin Kolman <martin.kolman@gmail.com> - 0.50.3
- Python 2.5 compatibility fixes
* Thu Jan 01 2015 Martin Kolman <martin.kolman@gmail.com> - 0.50.2
- first official modRana release for Android! :)
- make theme parsing more robust
- fix window sizing regression on Sailfish OS
* Wed Dec 31 2014 Martin Kolman <martin.kolman@gmail.com> - 0.50.1
- layer timeout support (Frederic Ferner)
 - dynamic map layers (traffic, weather, etc.) now automatically load new tiles once the oled ones time out
 - not yet handles staring at the same part of map for hours
 - you need to move the map a bit so that the tiles are requested again & refetched
- support for setting network usage mode in Qt 5 GUI (Frederic Ferner)
 - max - unlimited network usage
 - minimal - no automatic tile download
- Thanks a lot to Frederic for these nice two patches! :)
- fix text sizing on icon grid
- fix compass rose display with qrc (Android)
 - it still does not rotate on Android some reason :)
* Sat Nov 01 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.12
- add missing qt5-qtsensors dependency on Fedora
* Sat Nov 01 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.11
- fix Qt 5 GUI icon & naim in desktop file on Fedora
* Sat Nov 01 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.10
- add the qt5-qtquickcontrols dependency on Fedora
* Sat Nov 01 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.9
- fix the modrana-gtk startup script on Fedora
* Fri Oct 31 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.8
- exclude Monav binaries from the Fedora package
* Thu Oct 23 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.7
- fix the compass rose not showing up in the Qt 5 GUI on Sailfish OS
* Tue Oct 21 2014 Martin Kolman <martin.kolman@gmail.com> - 0.49.6
- generate correct (Python 3.4) bytecode for the Sailfish OS package